fix(digital-screen): preserve nullable binding values